# SC3020-Database-System-Principles

./: .gitignore
.devcontainer/: devcontainer.json
proj_1/: README.md  bp_tree.cpp  bp_tree.h  btree.cpp  btree.hpp  btree_sample.cpp  data_analysis.ipynb  games_sorted.txt  games_t1.txt  games_t2.txt  games_t3.txt  games_t4.txt  games_t5.txt  games_t6.txt  main.cpp  node.cpp  node.h  record.h  task.cpp  task.h
proj_1/docs/: SC3020 Project 1 Presentation Script - Group 1.docx  data_analysis.ipynb  search_algorithm.tex  task3_results.xlsx
proj_1/storage/: block_storage_impl.h  data_block.cpp  data_block.h  serialize.cpp  serialize.h  storage.cpp  storage.h
proj_2/: README.md  docker-compose.yml  example.ipynb  ingestData.py  interface.py  pipesyntax.py  preprocessing.py  project.py  pyproject.toml  requirements.txt  sql_qep.txt
proj_2/imdb/: name.basics.sql
proj_2/init/: ingest_data.py
proj_2/init/sql/: title.akas.sql  title.basics.sql  title.crew.sql  title.episode.sql  title.principals.sql  title.ratings.sql
